@@ -23,6 +23,8 @@
        dialog and then copies the file to the working copy.
        This is the recommended way to recover a deleted
        file. (Stefan)
+- ADD: Option to disable the overlays in applications
+       other than explorer. (Stefan)
 - CHG: Searching in the log dialog now also searches
        the changed paths. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
